[package]
name = "jackc"
version = "0.1.0"
authors = ["s8sato <49983831+s8sato@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
convert_case = "0.4"
pest = "2.0"
pest_derive = "2.0"
